# sphaira

./: .gitignore  CMakeLists.txt  Makefile  index.css  index.html  index.js
sphaira/: CMakeLists.txt
sphaira/include/ui/menus/: game_menu.hpp  game_stats_menu.hpp
sphaira/source/: main.cpp
sphaira/source/ui/menus/: game_menu.cpp  game_stats_menu.cpp  main_menu.cpp
